# asdf

./: .gitignore  .tool-versions  CHANGELOG.md  Cargo.toml  test_file
.github/workflows/: semantic-pr.yml
docs/: package-lock.json  package.json
lib/commands/: command-install.bash
src/: lib.rs  main.rs  tool_version.rs  tool_versions.rs
src/commands/: current.rs  help.rs  install.rs  latest.rs  list.rs  mod.rs  reshim.rs
src/core/: current.rs  help.rs  install.rs  installs.rs  latest.rs  list.rs  mod.rs  reshim.rs
test/: current_command.bats  install_command.bats  reshim_command.bats  test_helpers.bash  update_command.bats
tests/: bats.rs
