[package]
name = "asdf"
version = "0.1.0"
authors = ["Morley, Jonathan <jmorley@cvent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
dirs = "3.0.2"
glob = "0.3.0"
is_executable = "1.0.1"
itertools = "0.10.1"
num_cpus = "1.13.0"
regex = "1.5.4"
structopt = { version = "0.3.21", features = ["paw"] }
tempfile = "3.2.0"
which = "4.2.2"

[dev-dependencies]
copy_dir = "0.1.2"
serial_test = "0.5.1"
tempdir = "0.3.7"
tempfile = "3.2.0"
tmp_env = "0.1.1"
