[package]
name = "asdr"
version = "0.1.0"
authors = ["Morley, Jonathan <jmorley@cvent.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
dirs = "4"
fs-err = "2"
glob = "0.3"
is_executable = "1"
itertools = "0.10"
num_cpus = "1"
regex = "1"
structopt = { version = "0.3", features = ["paw"] }
tempfile = "3"
which = "4"

[dev-dependencies]
copy_dir = "0.1"
serial_test = "0.9"
tempdir = "0.3"
tempfile = "3"
tmp_env = "0.1"
